# dockerize-apps

./: .gitignore  mkdocs.yml  pyproject.toml
compose/: mongo.yaml  postgresql.yaml
connections/elastic/: docker-compose.yaml
connections/mongo/: docker-compose.yaml
connections/postgre/: docker-compose.yaml
connections/redis/: docker-compose.yaml
connections/rmq/: docker-compose.yaml
docs/: index.md
docs/connections/: mongo.md  postgresql.md
