[project]
name = "dockerize"
version = "0.1.0"
description = ""
authors = [
    {name = "oktapian",email = "oktapian@jkt1.ebdesk.com"}
]
readme = "README.md"
requires-python = "3.10.12"
dependencies = [
    "mkdocs-material (>=9.6.11,<10.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
